--- a/src/damainpotepuh/StaticBundle/Resources/views/layout.html.twig
+++ b/src/damainpotepuh/StaticBundle/Resources/views/layout.html.twig
@@ -107,7 +107,7 @@
                   </ul>
                 </li>
                 <li style="margin-left: 10px;"><a href="{{ path('_galerija') }}" style="color: #fff;">GALERIJA</a></li>
-                <li style="margin-left: 10px;"><a href="{{ path('_video') }}" style="color: #fff;">VIDEO</a></li>
+                <li style="margin-left: 10px;"><a href="{{ path('_videos') }}" style="color: #fff;">VIDEO</a></li>
                 <li style="margin-left: 10px;"><a href="{{ path('_kontakt') }}" style="color: #fff;">KONTAKT</a></li>
                 <li style="margin-left: 10px;">
                     <img src="{{ asset('bundles/damainpotepuhstatic/images/heart.jpg') }}" alt="Heart" id="heart" />
